eks/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ms
  name: x-ray-app-ingress
  labels:
    name: x-ray-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: xray-app
              port:
                number: 80
